<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/AppTheme.NoActionBar"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/request_menu"
            android:title="@string/requests" />
        <item
            android:id="@+id/donation_center_menu"
            android:title="@string/donation_centers" />
        <item
            android:id="@+id/donation_menu"
            android:title="@string/donations" />
        <item
            android:id="@+id/gallery_menu"
            android:title="@string/gallery" />
        <item
            android:id="@+id/fresh_config_menu"
            android:title="@string/fresh_config"/>
        <item
            android:id="@+id/invite_menu"
            android:title="@string/invite_menu_label" />
        <item
            android:id="@+id/exit_menu"
            android:title="@string/exit" />
        <item
            android:id="@+id/sign_out_menu"
            android:title="@string/sign_out"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
